--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
           Adicionar participantes
         </button>
         <div class="numeros">
-          <h3>QUANTIDADE DE GANHADORES DA RODADA:</h3>
+          <h3>QUANTIDADE DE VENCEDORES:</h3>
           <input type="number" id="quantidade" min="1" />
         </div>
         <button onclick="sortearNomes()">Sortear Nomes</button>
