--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         </button>
         <div class="numeros">
           <h3>N.º DE VENCEDORES:</h3>
-          <input type="number" id="quantidade" min="1" />
+          <input type="number" id="quantidade" min="1" placeholder="Ex: 1 ou 2"/>
         </div>
         <button onclick="sortearNomes()">Sortear Nomes</button>
         <div class="resultado">
