--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <main>
       <section class="parte1">
         <div>
-          <h1>Sorteador </h1>
+          <h1>Sorteio</h1>
         </div>
         <h2>Digite os nomes separados por vírgula:</h2>
         <textarea id="participantes" placeholder="Exemplo: Kleber, Maria, Pedro" ></textarea>
